# JigsawVisual

./: CMakeLists.txt  CMakeSettings.json  JigsawVisual.cpp  JigsawVisual.h  JigsawVisualPair.cpp  JigsawVisualPair.h  README.md  Utils.h  cmdline.h  main_AssembleLoop.cpp  main_AssemblePair.cpp  main_AssemblePose.cpp  main_AssembleTopKPair.cpp
example/: bg_color.txt  line_pose.txt  matrix_pose.txt
